# HuggingFacePull

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-20-huggingfacepull-fastapi.md  2026-06-21-file-aware-downloads.md
mac/HuggingFacePullMac/: Package.swift
mac/HuggingFacePullMac/Sources/HuggingFacePullMac/: AppViewModel.swift  Formatters.swift  HuggingFacePullMacApp.swift  Views.swift
mac/HuggingFacePullMac/Sources/HuggingFacePullMacCore/: APIClient.swift  BackendProcess.swift  Models.swift
mac/HuggingFacePullMac/Tests/HuggingFacePullMacCoreTests/: HuggingFacePullMacCoreTests.swift
scripts/: common.ps1  list_hf_caches.py  run-mac.ps1  run.ps1  setup.ps1  test.ps1
src/huggingface_pull/: __init__.py  api.py  app_logging.py  cli.py  config.py  hub.py  models.py  queue.py  web_main.py
src/huggingface_pull/web/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_hub.py  test_list_hf_caches.py  test_mac_layout.py  test_queue.py  test_scripts.py  test_web_app.py
