[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "huggingfacepull"
version = "0.1.0"
description = "Local FastAPI tool for searching and downloading Hugging Face Hub model snapshots."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "cpjjh" }]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "huggingface_hub>=0.32",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "httpx2>=2.4,<3",
  "pytest>=8.0",
]

[project.scripts]
hfpull = "huggingface_pull.cli:main"
hfpull-web = "huggingface_pull.cli:run_web"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
huggingface_pull = ["web/*", "web/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
